--- a/src/app/components/chat/chat-global.component.css
+++ b/src/app/components/chat/chat-global.component.css
@@ -1,22 +1,58 @@
 .message {
     padding: 10px;
-    margin: 10px;
+    margin: 5px;
     background-color: #ededed;
-    box-shadow: 5px 10px 18px #888888;
+    box-shadow: 2px 4px 5px #888888;
     border-radius: 30px;
 }
 .chat-container {
     overflow: auto;
-    height: 80%;
+    height: 65%;
 }
 .field-chat {
     margin-top: 20px;
     padding: 10px;
     border-radius: 20px;
-    box-shadow: 5px 10px 18px #888888;
+    border: none;
+    box-shadow: 2px 4px 5px #888888;
 }
 .btn-send {
     border-radius: 50%;
     margin: 20px;
     padding: 10px;
+}
+.chat-text {
+    word-break: break-all;
+    text-align: left;
+}
+.container {
+    height: 100%;
+    width: 90% !important;
+}
+h5 {
+    color: white;
+}
+.img-treinador {
+    margin-top: 15px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    box-shadow: 2px 4px 5px #888888;
+}
+.p-0 {
+    padding: 0 !important;
+}
+.pokemon-pokedex {
+    width: 80px;
+    height: 80px;
+}
+.ui-g-4.choose p {
+    color: lightseagreen;
+    font-weight: bold;
+    font-size: 0.8em;
+}
+.ui-g-4.choose small {
+    color: lightseagreen;
+    font-weight: bold;
+    font-size: 0.8em;
 }
